--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -10,8 +10,6 @@
         android:id="@+id/rv_shoes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_list"
-
-        />
+        tools:listitem="@layout/item_list" />
 
 </FrameLayout>
